# csql

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  constants.h  csql.cpp  csql.h  main.cpp
src/analyzer/: analyzer.cpp  analyzer.h  operations.cpp  operations.h
src/dataframe/: in_memory_df.cpp  in_memory_df.h
src/executor/: executor.cpp  executor.h
src/filter/: filter.cpp  filter.h
src/metadata/: metadata.cpp  metadata.h  metadata_store.cpp  metadata_store.h  schema.h
src/parser/: parser.cpp  parser.h
src/table/: table.cpp  table.h
src/util/: file.h  log.h
test/: CMakeLists.txt
test/e2e/: ddl.cpp  dml.cpp  read.cpp
test/unit/: analyzer.cpp  metastore.cpp
